--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
@@ -24,34 +24,34 @@ FROM [Financial]]]>
 	</background>
 	<title>
 		<band height="166" splitType="Stretch">
-			<staticText>
+			<textField>
 				<reportElement x="0" y="1" width="555" height="15" uuid="b2847462-8dc7-42d4-a144-53fa5129a91f"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[ADVANCE QUESTIONNAIRE ON MAIN ODA AGGREGATES]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{aq.title}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement x="0" y="17" width="555" height="15" uuid="7d2520e0-f1b3-4536-bb21-ea7fbe4ec892"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="Arial" size="12" isBold="false"/>
 				</textElement>
-				<text><![CDATA[(2012 Edition)]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{aq.subtitle}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement x="0" y="32" width="118" height="23" uuid="d971475c-3ae3-4306-800d-edad48554bf8"/>
 				<textElement>
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Reporting Country:]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{aq.reportingCountry}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement x="297" y="32" width="130" height="13" uuid="7f64e3e1-16c4-49f6-8568-3307a1043be8"/>
 				<textElement>
 					<font fontName="Arial" size="10" isBold="false" isItalic="true"/>
 				</textElement>
-				<text><![CDATA[Exchange rates used]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{aq.exchangeRatesUsed}]]></textFieldExpression>
+			</textField>
 			<staticText>
 				<reportElement x="463" y="45" width="58" height="15" uuid="2c4a8cb4-0274-457a-8ced-05603e84aeb2"/>
 				<textElement>
@@ -59,20 +59,20 @@ FROM [Financial]]]>
 				</textElement>
 				<text><![CDATA[1 $ U.S. =]]></text>
 			</staticText>
-			<staticText>
+			<textField>
 				<reportElement x="0" y="136" width="107" height="15" uuid="1b63871e-604e-4c71-b49a-8fab9e500103"/>
 				<textElement verticalAlignment="Top">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[DISBURSEMENTS]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{aq.disbursements}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement x="380" y="136" width="154" height="15" uuid="c839ccf7-3877-4dda-9b0a-d76ab6e374b8"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="Arial" size="10" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Millions US dollars]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{aq.millionUSDollars}]]></textFieldExpression>
+			</textField>
 			<textField>
 				<reportElement x="367" y="45" width="96" height="15" uuid="d202c553-1036-4bf8-8299-8b94584b521a"/>
 				<textElement>
@@ -94,13 +94,13 @@ FROM [Financial]]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{SECOND_YEAR}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement x="297" y="151" width="52" height="15" uuid="8422c3e6-a07a-4041-96a5-b6678fa8b527"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="Arial" size="10" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Row]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{aq.row}]]></textFieldExpression>
+			</textField>
 			<textField>
 				<reportElement x="455" y="106" width="100" height="14" uuid="9f1a26a5-dbd6-44bb-8b80-ec043b9c1fc9"/>
 				<textElement textAlignment="Center">
@@ -165,20 +165,20 @@ FROM [Financial]]]>
 	</title>
 	<pageHeader>
 		<band height="527" splitType="Stretch">
-			<staticText>
+			<textField>
 				<reportElement x="0" y="0" width="204" height="20" uuid="301f0e82-d09a-4e11-bc67-b831104674d9"/>
 				<textElement verticalAlignment="Top">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[DEVELOPING COUNTRIES (3)]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{aq.developingCountries}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement x="0" y="20" width="229" height="14" uuid="d05c28ea-11fc-4465-9454-b57c3e9f9c69"/>
 				<textElement verticalAlignment="Top">
 					<font fontName="Arial" size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Official Development Assistance, net]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{aq.odaNet}]]></textFieldExpression>
+			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement x="352" y="20" width="100" height="14" uuid="4150ac15-ec14-4e02-86b2-98311846b6bd"/>
 				<textElement textAlignment="Right">
@@ -207,6 +207,9 @@ FROM [Financial]]]>
 				<subreportParameter name="MONDRIAN_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
 				</subreportParameter>
+				<subreportParameter name="REPORT_RESOURCE_BUNDLE">
+					<subreportParameterExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}]]></subreportParameterExpression>
+				</subreportParameter>
 				<subreportExpression><![CDATA[$P{SUBDIR_PATH} + "/aq_master_bilateral_toa_year.jasper"]]></subreportExpression>
 			</subreport>
 			<subreport>
@@ -222,6 +225,9 @@ FROM [Financial]]]>
 				</subreportParameter>
 				<subreportParameter name="MONDRIAN_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="REPORT_RESOURCE_BUNDLE">
+					<subreportParameterExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportExpression><![CDATA[$P{SUBDIR_PATH} + "/aq_master_bilateral_tof_year.jasper"]]></subreportExpression>
 			</subreport>
@@ -239,15 +245,18 @@ FROM [Financial]]]>
 				<subreportParameter name="MONDRIAN_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
 				</subreportParameter>
+				<subreportParameter name="REPORT_RESOURCE_BUNDLE">
+					<subreportParameterExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}]]></subreportParameterExpression>
+				</subreportParameter>
 				<subreportExpression><![CDATA[$P{SUBDIR_PATH} + "/aq_master_multilateral_org_year.jasper"]]></subreportExpression>
 			</subreport>
-			<staticText>
+			<textField>
 				<reportElement x="0" y="326" width="107" height="20" uuid="2ed57308-69e8-4d87-9af8-6b3eb2c20ccf"/>
 				<textElement>
 					<font fontName="Arial" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Memo items:]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{aq.memoItems}]]></textFieldExpression>
+			</textField>
 			<subreport>
 				<reportElement x="0" y="346" width="555" height="87" uuid="e5f585b8-bdbc-4df5-ac96-513086bdbdba"/>
 				<subreportParameter name="FIRST_YEAR">
@@ -261,6 +270,9 @@ FROM [Financial]]]>
 				</subreportParameter>
 				<subreportParameter name="MONDRIAN_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="REPORT_RESOURCE_BUNDLE">
+					<subreportParameterExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportExpression><![CDATA[$P{SUBDIR_PATH} + "/aq_master_memo_region_year.jasper"]]></subreportExpression>
 			</subreport>
@@ -278,6 +290,9 @@ FROM [Financial]]]>
 				<subreportParameter name="MONDRIAN_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
 				</subreportParameter>
+				<subreportParameter name="REPORT_RESOURCE_BUNDLE">
+					<subreportParameterExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}]]></subreportParameterExpression>
+				</subreportParameter>
 				<subreportExpression><![CDATA[$P{SUBDIR_PATH} + "/aq_master_memo_sector_year.jasper"]]></subreportExpression>
 			</subreport>
 			<subreport>
@@ -294,6 +309,9 @@ FROM [Financial]]]>
 				<subreportParameter name="MONDRIAN_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
 				</subreportParameter>
+				<subreportParameter name="REPORT_RESOURCE_BUNDLE">
+					<subreportParameterExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}]]></subreportParameterExpression>
+				</subreportParameter>
 				<subreportExpression><![CDATA[$P{SUBDIR_PATH} + "/aq_master_memo_debtrelief_year.jasper"]]></subreportExpression>
 			</subreport>
 			<subreport>
@@ -309,6 +327,9 @@ FROM [Financial]]]>
 				</subreportParameter>
 				<subreportParameter name="MONDRIAN_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="REPORT_RESOURCE_BUNDLE">
+					<subreportParameterExpression><![CDATA[$P{REPORT_RESOURCE_BUNDLE}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportExpression><![CDATA[$P{SUBDIR_PATH} + "/aq_master_memo_totaloda_year.jasper"]]></subreportExpression>
 			</subreport>
