notification for draft field in form plus editing of custom transactions

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/TransactionTableListPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/TransactionTableListPanel.html
@@ -15,7 +15,7 @@
         	<thead>
 	           <tr>
 	               <th><span wicket:id="transaction-name-label">Transaction name</span></th>
-	               <th><span wicket:id="transaction-commitment-value-label">Commitment value</span></th>
+	               <th><span wicket:id="transaction-reporting-year-label">Reporting Year</span></th>
 	               <th><span wicket:id="transaction-sector-name-label">Sector name</span></th>
 	               <th><span wicket:id="transaction-organization-name-label">Organization name</span></th>
 	               <th><span wicket:id="transaction-actions-label">Actions</span></th>
@@ -26,7 +26,7 @@
 					<span wicket:id="transaction-name">-1</span>
 				</td>
 				<td>
-					<span wicket:id="transaction-commitment-value">0</span>
+					<span wicket:id="transaction-reporting-year">0</span>
 				</td>
 				<td>
 					<span wicket:id="transaction-sector-name">unspecified</span>
