--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/dashboard/components/Filter.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/dashboard/components/Filter.html
@@ -10,7 +10,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <body>
 <wicket:panel>
-    <div wicket:id="filter"/>
+	<form class="form-horizontal">
+		<div class="control-group">
+			<div wicket:id="title" class="control-label"/>
+			<div wicket:id="filter" class="controls"/>
+		</div>
+	</form>
+
 </wicket:panel>
 </body>
 </html>
