Changed measure used by the AQ Report

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
@@ -10,14 +10,14 @@
 	<queryString language="mdx">
 		<![CDATA[SELECT
 {[Reporting Year].[$P{FIRST_YEAR}], [Reporting Year].[$P{SECOND_YEAR}]} ON ROWS,
-{[Measures].[Commitments Amount]} ON COLUMNS
+{[Measures].[Extended Amount]} ON COLUMNS
 FROM [Financial]]]>
 	</queryString>
-	<field name="Commitments Amount Year 1" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Reporting Year].[@@FIRST_YEAR@@])]]></fieldDescription>
+	<field name="Extended Amount Year 1" class="java.lang.Number">
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Reporting Year].[@@FIRST_YEAR@@])]]></fieldDescription>
 	</field>
-	<field name="Commitments Amount Year 2" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Reporting Year].[@@SECOND_YEAR@@])]]></fieldDescription>
+	<field name="Extended Amount Year 2" class="java.lang.Number">
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Reporting Year].[@@SECOND_YEAR@@])]]></fieldDescription>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
@@ -184,14 +184,14 @@ FROM [Financial]]]>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{Commitments Amount Year 1}.doubleValue()/1000000]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{Extended Amount Year 1}.doubleValue()/1000000]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement x="455" y="20" width="100" height="14" uuid="c9942bc6-86f5-404f-84db-195b820e9cde"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{Commitments Amount Year 2}.doubleValue()/1000000]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{Extended Amount Year 2}.doubleValue()/1000000]]></textFieldExpression>
 			</textField>
 			<subreport>
 				<reportElement x="0" y="40" width="555" height="100" uuid="e5f585b8-bdbc-4df5-ac96-513086bdbdba"/>
