--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_totaloda_year.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_totaloda_year.jrxml
@@ -8,33 +8,33 @@
 	<queryString language="mdx">
 		<![CDATA[SELECT
 {[Type of Aid].[A], [Type of Aid].[B], [Type of Aid].[C], [Type of Aid].[D], [Type of Aid].[E], [Type of Aid].[F], [Type of Aid].[G], [Type of Aid].[H]} ON ROWS,
-{[Measures].[Commitments Amount]} ON COLUMNS
+{[Measures].[Extended Amount]} ON COLUMNS
 FROM [Financial]
 WHERE {[Reporting Year].[$P{FIRST_YEAR}]}*{[BiMultilateral].[BI_MULTILATERAL##1]}]]>
 	</queryString>
 	<field name="Budget Support" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[A])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[A])]]></fieldDescription>
 	</field>
 	<field name="Core contributions and pooled programmes and funds" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[B])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[B])]]></fieldDescription>
 	</field>
 	<field name="Project-type interventions" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[C])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[C])]]></fieldDescription>
 	</field>
 	<field name="Experts and other technical assistance" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[D])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[D])]]></fieldDescription>
 	</field>
 	<field name="Scholarships and student costs in donor countries" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[E])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[E])]]></fieldDescription>
 	</field>
 	<field name="Debt Relief" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[F])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[F])]]></fieldDescription>
 	</field>
 	<field name="Administrative costs not included elsewhere" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[G])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[G])]]></fieldDescription>
 	</field>
 	<field name="Other in-donor expenditures" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[H])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[H])]]></fieldDescription>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
