--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_region_year.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master_memo_region_year.jrxml
@@ -10,22 +10,22 @@
 		<![CDATA[
 SELECT
 {[Type of Aid].[A], [Type of Aid].[B], [Type of Aid].[C], [Type of Aid].[D]} ON ROWS,
-{[Measures].[Commitments Amount]} ON COLUMNS
+{[Measures].[Extended Amount]} ON COLUMNS
 FROM [Financial]
 WHERE {[Reporting Year].[$P{FIRST_YEAR}]}*{[BiMultilateral].[BI_MULTILATERAL##1]}
 ]]>
 	</queryString>
 	<field name="Budget Support" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[A])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[A])]]></fieldDescription>
 	</field>
 	<field name="Core contributions and pooled programmes and funds" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[B])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[B])]]></fieldDescription>
 	</field>
 	<field name="Project-type interventions" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[C])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[C])]]></fieldDescription>
 	</field>
 	<field name="Experts and other technical assistance" class="java.lang.Number">
-		<fieldDescription><![CDATA[Data([Measures].[Commitments Amount], [Type of Aid].[D])]]></fieldDescription>
+		<fieldDescription><![CDATA[Data([Measures].[Extended Amount], [Type of Aid].[D])]]></fieldDescription>
 	</field>
 	<background>
 		<band splitType="Stretch"/>
